--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
 <body>
     <div class="container">
         <div class="top">
-            <img src="./img/bg.png" alt="">
-            
+            <img src="./img/bg.png" class="background" alt="">
+            <div class="header__top">
+                <span>Сладкий сундук</span>
+                <div class="coordinate">
+                    м. Полтава, вул. Шмонька, 21
+                </div>
+            </div>
         </div>
     </div>
 </body>
