--- a/index.html
+++ b/index.html
@@ -11,12 +11,31 @@
 
 <body>
     <div class="container">
-        <div class="top">
+        <div class="header">
             <img src="./img/bg.png" class="background" alt="">
-            <div class="header__top">
-                <span>Сладкий сундук</span>
-                <div class="coordinate">
-                    м. Полтава, вул. Шмонька, 21
+            <div class="top">
+                <div class="header__top">
+                    <span>Сладкий сундук</span>
+                    <div class="right__side">
+                        <div class="coordinate">
+                           <img src="./img/Facebook Places.png" class="coordinat__img" alt=""> <span>м. Полтава, </span> 
+                            <span>вул. Шмонька, 21</span>
+                        </div>
+                        <div class="tellephone">
+                            <span class="tell"><img src="./img/Vector.png" class="phone" alt=""> 0500354787</span>
+                            <span class="time_worck">Ежедневно с 9:00 до 20:00</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="text__content">
+                    <div class="btn_top">вкуснейшие</div>
+                    <div class="text">Пирожные и капкейки от 150 ₽/шт. с доставкой по Санкт Петербургу</div>
+                    <div class="text_bottom">Приготовим за 3 часа в день заказа. 
+                        Доставка на авто в холодильнике.</div>
+                        <div class="container_text__bottom">
+                        <div class="btn">Перейти в каталог</div>
+                        <div class="text__bottom">9 различных видов на выбор</div>   
+                    </div>     
                 </div>
             </div>
         </div>
