--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
 <body>
     <div class="container">
+        <img src="./img/berry (1).png" class="berry_1" alt="">
+        <img src="./img/berry_2.png" class="berry_2" alt="">
+        <img src="./img/berry_3.png" class="berry_3" alt="">
         <div class="header">
             <img src="./img/bg.png" class="background" alt="">
             <div class="top">
@@ -18,7 +21,8 @@
                     <span>Сладкий сундук</span>
                     <div class="right__side">
                         <div class="coordinate">
-                           <img src="./img/Facebook Places.png" class="coordinat__img" alt=""> <span>м. Полтава, </span> 
+                            <img src="./img/Facebook Places.png" class="coordinat__img" alt=""> <span>м. Полтава,
+                            </span>
                             <span>вул. Шмонька, 21</span>
                         </div>
                         <div class="tellephone">
@@ -30,14 +34,153 @@
                 <div class="text__content">
                     <div class="btn_top">вкуснейшие</div>
                     <div class="text">Пирожные и капкейки от 150 ₽/шт. с доставкой по Санкт Петербургу</div>
-                    <div class="text_bottom">Приготовим за 3 часа в день заказа. 
+                    <div class="text_bottom">Приготовим за 3 часа в день заказа.
                         Доставка на авто в холодильнике.</div>
-                        <div class="container_text__bottom">
+                    <div class="container_text__bottom">
                         <div class="btn">Перейти в каталог</div>
-                        <div class="text__bottom">9 различных видов на выбор</div>   
-                    </div>     
+                        <div class="text__bot">9 различных </br>видов на выбор</div>
+                    </div>
                 </div>
             </div>
+        </div>
+
+    </div>
+    <div class="center__block">
+        <h1>Для любых событий и дорогих вам людей </h1>
+        <div class="product__set">
+            <div class="product">
+                <div class="img">
+                    <img src="./img/img_product1.png" alt="">
+                </div>
+                <div class="product__info">
+                    <div class="title">
+                        Кремовый замок
+                    </div>
+                    <div class="text">
+                        Нежный крем любого цвета на выбор, вафельная основа
+                    </div>
+                    <div class="price">
+                        150 ₽/шт.
+                    </div>
+                    <div class="btn__by">
+                        Заказать
+                    </div>
+                </div>
+            </div>
+            <div class="product">
+                <div class="img">
+                    <img src="./img/img_product2.png" alt="">
+                </div>
+                <div class="product__info">
+                    <div class="title">
+                        Кремовый замок
+                    </div>
+                    <div class="text">
+                        Нежный крем любого цвета на выбор, вафельная основа
+                    </div>
+                    <div class="price">
+                        150 ₽/шт.
+                    </div>
+                    <div class="btn__by">
+                        Заказать
+                    </div>
+                </div>
+            </div>
+            <div class="product">
+                <div class="img">
+                    <img src="./img/img_product3.png" alt="">
+                </div>
+                <div class="product__info">
+                    <div class="title">
+                        Кремовый замок
+                    </div>
+                    <div class="text">
+                        Нежный крем любого цвета на выбор, вафельная основа
+                    </div>
+                    <div class="price">
+                        150 ₽/шт.
+                    </div>
+                    <div class="btn__by">
+                        Заказать
+                    </div>
+                </div>
+            </div>
+            <div class="product">
+                <div class="img">
+                    <img src="./img/img_product4.png" alt="">
+                </div>
+                <div class="product__info">
+                    <div class="title">
+                        Кремовый замок
+                    </div>
+                    <div class="text">
+                        Нежный крем любого цвета на выбор, вафельная основа
+                    </div>
+                    <div class="price">
+                        150 ₽/шт.
+                    </div>
+                    <div class="btn__by">
+                        Заказать
+                    </div>
+                </div>
+            </div>
+            <div class="product">
+                <div class="img">
+                    <img src="./img/img_product5.png" alt="">
+                </div>
+                <div class="product__info">
+                    <div class="title">
+                        Кремовый замок
+                    </div>
+                    <div class="text">
+                        Нежный крем любого цвета на выбор, вафельная основа
+                    </div>
+                    <div class="price">
+                        150 ₽/шт.
+                    </div>
+                    <div class="btn__by">
+                        Заказать
+                    </div>
+                </div>
+            </div>
+            <div class="product">
+                <div class="img">
+                    <img src="./img/img_product6.png" alt="">
+                </div>
+                <div class="product__info">
+                    <div class="title">
+                        Кремовый замок
+                    </div>
+                    <div class="text">
+                        Нежный крем любого цвета на выбор, вафельная основа
+                    </div>
+                    <div class="price">
+                        150 ₽/шт.
+                    </div>
+                    <div class="btn__by">
+                        Заказать
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="center__zakaz">
+        <img src="./img/01 1.png" class="top" alt="">
+        <img src="./img/02 1.png" class="bottom" alt="">
+        <img src="./img/phone 1.png" class="phone" alt="">
+        <img src="./img/leaf.png" class="leaf" alt="">
+        <img src="./img/berry_phone.png" class="berry_phone" alt="">
+        <div class="text__content">
+            <div class="btn_top">Не нашли то что нужно?</div>
+            <div class="text">Приготовим заказ любой сложности по фото или эскизу</div>
+            <div class="text_bottom">Загрузите фотографию или эскиз капкейков  и мы рассчитаем стоимость за 30 минут</div>
+            <div class="container_text__bottom">
+                <div class="btn">Загрузить фотографию</div>
+               
+            </div>
+        </div>
+        <div class="ledy__container">
+            
         </div>
     </div>
 </body>
