--- a/index.html
+++ b/index.html
@@ -10,181 +10,136 @@
 </head>
 
 <body>
-    <div class="container">
-        <img src="./img/berry (1).png" class="berry_1" alt="">
-        <img src="./img/berry_2.png" class="berry_2" alt="">
-        <img src="./img/berry_3.png" class="berry_3" alt="">
-        <div class="header">
-            <img src="./img/bg.png" class="background" alt="">
-            <div class="top">
-                <div class="header__top">
-                    <span>Сладкий сундук</span>
-                    <div class="right__side">
-                        <div class="coordinate">
-                            <img src="./img/Facebook Places.png" class="coordinat__img" alt=""> <span>м. Полтава,
-                            </span>
-                            <span>вул. Шмонька, 21</span>
-                        </div>
-                        <div class="tellephone">
-                            <span class="tell"><img src="./img/Vector.png" class="phone" alt=""> 0500354787</span>
-                            <span class="time_worck">Ежедневно с 9:00 до 20:00</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="text__content">
-                    <div class="btn_top">вкуснейшие</div>
-                    <div class="text">Пирожные и капкейки от 150 ₽/шт. с доставкой по Санкт Петербургу</div>
-                    <div class="text_bottom">Приготовим за 3 часа в день заказа.
-                        Доставка на авто в холодильнике.</div>
-                    <div class="container_text__bottom">
-                        <div class="btn">Перейти в каталог</div>
-                        <div class="text__bot">9 различных </br>видов на выбор</div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="backround">
 
-    </div>
-    <div class="center__block">
-        <h1>Для любых событий и дорогих вам людей </h1>
-        <div class="product__set">
-            <div class="product">
-                <div class="img">
-                    <img src="./img/img_product1.png" alt="">
+
+        <div class="container">
+            <div class="logo"><span>d</span>olby.</div>
+            <div class="top">
+                <div class="left">
+                    <div class="catigory">Featured Film</div>
+                    <div class="title">ZERO CONTACT</div>
+                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit gravida enim, orci
+                        morbi elementum gravida. </div>
+                    <div class="btn">Let’s get started <img src="./img/Arrow 19.png" alt=""></div>
+                    <div class="active_users">
+                        <div class="one">2k | Active user</div>
+                        <div class="one">5k | Music Video</div>
+                        <div class="one">7k | Visual Art</div>
+
+                    </div>
                 </div>
-                <div class="product__info">
-                    <div class="title">
-                        Кремовый замок
+                <div class="right">
+                    <img src="./img/decentralized finance (DeFi) 1.png" alt="">
+                    <img src="./img/Rectangle 7588.png" class="rectangle" alt="">
+                </div>
+
+            </div>
+            <div class="slider__top">
+                <div class="title__">Features Artworks</div>
+                <div class="slider__slide">
+                    <div class="product">
+                        <img src="./img/Rectangle 404.png" alt="">
+                        <div class="content__product">
+                            <div class="title">Jenuine Ruddy Girl</div>
+                            <div class="catigory">Till Lindemann by NFT Frame Art</div>
+                            <div class="price__">
+                                <span>Price</span>
+                                <div class="price"><img src="./img/image 1.png" alt=""> €25.00</div>
+                            </div>
+                            <div class="btn_like__bye">
+                                <img src="./img/Vector.png" alt="">
+                                <div class="btn__">BUY</div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="text">
-                        Нежный крем любого цвета на выбор, вафельная основа
+                </div>
+                <div class="slider__slide">
+                    <div class="product">
+                        <img src="./img/Rectangle 405.png" alt="">
+                        <div class="content__product">
+                            <div class="title">Jenuine Ruddy Girl</div>
+                            <div class="catigory">Till Lindemann by NFT Frame Art</div>
+                            <div class="price__">
+                                <span>Price</span>
+                                <div class="price"><img src="./img/image 1.png" alt=""> €25.00</div>
+                            </div>
+                            <div class="btn_like__bye">
+                                <img src="./img/Vector.png" alt="">
+                                <div class="btn__">BUY</div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="price">
-                        150 ₽/шт.
+                </div>
+                <div class="slider__slide">
+                    <div class="product">
+                        <img src="./img/Rectangle 406.png" alt="">
+                        <div class="content__product">
+                            <div class="title">Jenuine Ruddy Girl</div>
+                            <div class="catigory">Till Lindemann by NFT Frame Art</div>
+                            <div class="price__">
+                                <span>Price</span>
+                                <div class="price"><img src="./img/image 1.png" alt=""> €25.00</div>
+                            </div>
+                            <div class="btn_like__bye">
+                                <img src="./img/Vector.png" alt="">
+                                <div class="btn__">BUY</div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="btn__by">
-                        Заказать
+                </div>
+                <div class="slider__slide">
+                    <div class="product">
+                        <img src="./img/Rectangle 407.png" alt="">
+                        <div class="content__product">
+                            <div class="title">Jenuine Ruddy Girl</div>
+                            <div class="catigory">Till Lindemann by NFT Frame Art</div>
+                            <div class="price__">
+                                <span>Price</span>
+                                <div class="price"><img src="./img/image 1.png" alt=""> €25.00</div>
+                            </div>
+                            <div class="btn_like__bye">
+                                <img src="./img/Vector.png" alt="">
+                                <div class="btn__">BUY</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="slider__slide">
+                    <div class="product">
+                        <img src="./img/Rectangle 404.png" alt="">
+                        <div class="content__product">
+                            <div class="title">Jenuine Ruddy Girl</div>
+                            <div class="catigory">Till Lindemann by NFT Frame Art</div>
+                            <div class="price__">
+                                <span>Price</span>
+                                <div class="price"><img src="./img/image 1.png" alt=""> €25.00</div>
+                            </div>
+                            <div class="btn_like__bye">
+                                <img src="./img/Vector.png" alt="">
+                                <div class="btn__">BUY</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="product">
-                <div class="img">
-                    <img src="./img/img_product2.png" alt="">
+            <div class="subscribe">
+                <div class="title">Never Miss a drop!</div>
+                <div class="text">
+                    Subscribe to our ultra-exclusive drop list and be the first to know about upcoming dolby drops.
                 </div>
-                <div class="product__info">
-                    <div class="title">
-                        Кремовый замок
-                    </div>
-                    <div class="text">
-                        Нежный крем любого цвета на выбор, вафельная основа
-                    </div>
-                    <div class="price">
-                        150 ₽/шт.
-                    </div>
-                    <div class="btn__by">
-                        Заказать
-                    </div>
+                <div class="email">
+                    <div class="input-group">
+                        <input required="" type="text" name="text" autocomplete="off" class="input">
+                        <label class="user-label">Email Address</label>
+                        <input type="submit" value="Subscribe" class="send__input">
+                      </div>
                 </div>
-            </div>
-            <div class="product">
-                <div class="img">
-                    <img src="./img/img_product3.png" alt="">
-                </div>
-                <div class="product__info">
-                    <div class="title">
-                        Кремовый замок
-                    </div>
-                    <div class="text">
-                        Нежный крем любого цвета на выбор, вафельная основа
-                    </div>
-                    <div class="price">
-                        150 ₽/шт.
-                    </div>
-                    <div class="btn__by">
-                        Заказать
-                    </div>
-                </div>
-            </div>
-            <div class="product">
-                <div class="img">
-                    <img src="./img/img_product4.png" alt="">
-                </div>
-                <div class="product__info">
-                    <div class="title">
-                        Кремовый замок
-                    </div>
-                    <div class="text">
-                        Нежный крем любого цвета на выбор, вафельная основа
-                    </div>
-                    <div class="price">
-                        150 ₽/шт.
-                    </div>
-                    <div class="btn__by">
-                        Заказать
-                    </div>
-                </div>
-            </div>
-            <div class="product">
-                <div class="img">
-                    <img src="./img/img_product5.png" alt="">
-                </div>
-                <div class="product__info">
-                    <div class="title">
-                        Кремовый замок
-                    </div>
-                    <div class="text">
-                        Нежный крем любого цвета на выбор, вафельная основа
-                    </div>
-                    <div class="price">
-                        150 ₽/шт.
-                    </div>
-                    <div class="btn__by">
-                        Заказать
-                    </div>
-                </div>
-            </div>
-            <div class="product">
-                <div class="img">
-                    <img src="./img/img_product6.png" alt="">
-                </div>
-                <div class="product__info">
-                    <div class="title">
-                        Кремовый замок
-                    </div>
-                    <div class="text">
-                        Нежный крем любого цвета на выбор, вафельная основа
-                    </div>
-                    <div class="price">
-                        150 ₽/шт.
-                    </div>
-                    <div class="btn__by">
-                        Заказать
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="center__zakaz">
-        <img src="./img/01 1.png" class="top" alt="">
-        <img src="./img/02 1.png" class="bottom" alt="">
-        <img src="./img/phone 1.png" class="phone" alt="">
-        <img src="./img/leaf.png" class="leaf" alt="">
-        <img src="./img/berry_phone.png" class="berry_phone" alt="">
-        <div class="text__content">
-            <div class="btn_top">Не нашли то что нужно?</div>
-            <div class="text">Приготовим заказ любой сложности по фото или эскизу</div>
-            <div class="text_bottom">Загрузите фотографию или эскиз капкейков  и мы рассчитаем стоимость за 30 минут</div>
-            <div class="container_text__bottom">
-                <div class="btn">Загрузить фотографию</div>
-               
             </div>
         </div>
-        <div class="ledy__container">
-            
-        </div>
+        <div id="top" onclick="toTop();"><img src="./img/Up.png" alt="no pic" /></div>
     </div>
 </body>
-<div id="top" onclick="toTop();"><img src="./img/Up.png" alt="no pic" /></div>
 
 </html>
 
