--- a/index.html
+++ b/index.html
@@ -201,6 +201,13 @@
                                     <img src="./img/Rectangle 151.png" alt="">
                                     <img src="./img/Rectangle 151.png" alt="">
                                     <img src="./img/Rectangle 151.png" alt="">
+                                    <div class="soc__logo">
+                                        <img src="./img/Vector__tweat.png" alt="">
+                                        <img src="./img/Vecto_insta.png" alt="">
+                                        <img src="./img/Vector_soc.png" alt="">
+                                        <img src="./img/Vector_soc2.png" alt="">
+                                        <img src="./img/Vector_3.png" alt="">
+                                    </div>
                                 </div>
                             </div>
 
