--- a/index.html
+++ b/index.html
@@ -195,12 +195,14 @@
                 <div class="row">
                     <div class="left">
                         <div class="title">Join the community<div>
-                                <div class="soc__buttons">
-                                    <img src="./img/Rectangle 151.png" alt="">
-                                    <img src="./img/Rectangle 151.png" alt="">
-                                    <img src="./img/Rectangle 151.png" alt="">
-                                    <img src="./img/Rectangle 151.png" alt="">
-                                    <img src="./img/Rectangle 151.png" alt="">
+                                <div class="soc__container">
+                                    <div class="soc__buttons">
+                                        <img src="./img/Rectangle 151.png" alt="">
+                                        <img src="./img/Rectangle 151.png" alt="">
+                                        <img src="./img/Rectangle 151.png" alt="">
+                                        <img src="./img/Rectangle 151.png" alt="">
+                                        <img src="./img/Rectangle 151.png" alt="">
+                                    </div>
                                     <div class="soc__logo">
                                         <img src="./img/Vector__tweat.png" alt="">
                                         <img src="./img/Vecto_insta.png" alt="">
