--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </head>
 
 <body>
+
     <div class="backround">
 
-
+        0500354787
+         ntoh955@gmail.com
         <div class="container">
             <div class="logo"><span>d</span>olby.</div>
             <div class="top">
